clone google home and problem git

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="all">
             <div class="nav_top">
                 <nav>
-                    <a href="https://www.gmail.com" target="_blank">Gmail</a>
+                    <a href="https://www.gmail.com" target="_blank">YAnna Gmail</a>
                     <a href="https://www.google.se/imghp?hl=sv&ogb" target="_blank">Bilder</a>
                     <a href="https://www.google.se/intl/en/about/products" target=_blank>Google Apps</a>
                     <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.se/&ec=GAZAmgQ" target="_blank">Sign in</a>
